--- a/backendLib/.gitignore
+++ b/backendLib/.gitignore
@@ -3,3 +3,7 @@ src/**/*.js
 src/**/*.js.map
 src/**/*.d.ts.map
 src/**/*.d.ts
+types/**/*.js
+types/**/*.js.map
+types/**/*.d.ts.map
+types/**/*.d.ts
